@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.211 2010/06/26 05:43:28 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.212 2010/06/26 15:15:24 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -767,9 +767,9 @@ get_data(struct curve_points *current_plot)
 
 #ifdef EAM_OBJECTS
 		case CIRCLES:	/* x, y, radius */
-		    if (v[2] < 0) v[2] = 0;
+		    /* by default a full circle is drawn */
 		    store2d_point(current_plot, i++, v[0], v[1], v[0]-v[2], v[0]+v[2],
-		    		  0., variable_color_value, 360.); /* by default a full circle is drawn */
+		    		  0., variable_color_value, 360.);
 		    break;
 #endif
 		}               /*inner switch */
